# GarageSwarm

./: .coveragerc  .env.example  .gitignore  ARCHITECTURE.md  BMAD-METHOD完整教學指南.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN_V2.md  LICENSE  QUICK-TEST-GUIDE.md  README.md  README.zh-TW.md  SECURITY.md  SESSION_PROGRESS.md  TEST-RESULTS-SUMMARY.md  TESTING.md  docker-compose.yml  run-tests.sh  verify-simple.py  多AI工具協同開發指南.md  多工具協同技術驗證報告.md  文章改進總結.md
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_subtask_type.py  002_add_worker_api_key.py  003a_add_user_is_active.py  004_add_performance_indexes.py  005_add_workflow_templates.py
backend/examples/: websocket_client.py
backend/scripts/: dev_tools.py
backend/src/: __init__.py  config.py  container.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  redis_client.py
backend/src/api/: __init__.py
backend/src/auth/: __init__.py  dependencies.py  jwt_handler.py  password.py  worker_auth.py
backend/src/collaboration/: __init__.py  review.py
backend/src/evaluators/: __init__.py  aggregator.py  code_quality.py  security.py  testability.py
backend/src/mcp/: __init__.py  bus.py  registry.py  types.py
backend/src/memory/: __init__.py  short_term.py  types.py
backend/src/middleware/: __init__.py  backpressure.py  error_handler.py  metrics.py
backend/src/models/: __init__.py  (+13 more)
backend/tests/: conftest.py  test_redis.py  test_workflows.py
(+414 files in other folders)
